# baked-spa-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
fixture-coordinator/: index.html  style-compiled-ae723cdd15a233af.css  webui-6d04b57e86bad3ca.js  webui-6d04b57e86bad3ca_bg.wasm
src/: lib.rs
